2006-01-04  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_express_link): Fixed decoding of link status register.
	Thanks to Roland Dreier for his report.

2005-12-12  Martin Mares  <mj@ucw.cz>

	* lib/nbsd-libpci.c: If libpci is used by an ordinary user, allow
	at least read-only access. Patch by Pavel Celeda <celeda@liberouter.org>.

	* Makefile: Corrected library path on NetBSD.

2005-11-26  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.1.

	* lspci.c (show_machine): Subsystem vendors were printed incorrectly
	in machine-readable modes. Thanks to Pavel Celeda for a bug report.

2005-10-11  Martin Mares  <mj@ucw.cz>

	* lspci.c (new_bus): Fixed a memory leak. Thanks to Paul Sangree for reporting it.

2005-09-21  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.0.

	* pci.ids: Updated copyright header.

	* lib/sysfs.c (sysfs_get_resources): Removed warning about unsupported
	64-bit addresses, they are now always supported.

	* lspci.c (show_bases): Corrected printing of 64-bit addresses
	in bus-centric mode.

	* lib/configure: Enable 64-bit addresses on all Linux systems.

	* lib/types.h: Don't pad 64-bit addresses to 16 xigits, only to 8 if they
	are shorter.

2005-09-11  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.99-test11.

	* lspci.c: Removed unnecessary trailing zeros in pci_lookup_name() calls.

2005-09-10  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.99-test10.

	* pci.ids: Synchronized with the current database snapshot.

	* update-pciids.sh: Changed the default URL for downloading pci.ids
	to http://pciids.sourceforge.net/v2.2/pci.ids.

	* lib/pci.h (PCI_LIB_VERSION): Added version identifier.

	* lib/names.c: Rewritten the name database module almost from scratch.
	Everything is much cleaner and there are hopefully no more memory leaks;
	pci_lookup_name() now uses varargs in a backward compatible fashion.
	Introduced PCI_LOOKUP_NO_NUMBERS.

	The new code supports subsystem entries not tied to a specific device.