@@ -12,7 +12,7 @@ update-pciids \- download new version of the PCI ID list
 fetches the current version of the pci.ids file from the primary distribution
 site and installs it.
 
-This utility requires either wget or lynx to be installed. If gzip or bzip2
+This utility requires curl, wget or lynx to be installed. If gzip or bzip2
 are available, it automatically downloads the compressed version of the list.
 
 .SH FILES
